--- a/context.mdx
+++ b/context.mdx
@@ -26,6 +26,8 @@ description: "Profiles and Memory in one place for AI personalization"
 
 Together, these make answers more relevant and actionable.
 
+**Why it matters:** Profile and memory are used for personalization but treated as hints, not verified facts. Ravell won't present inferred or remembered context as truth. When sources conflict, higher-quality sources (e.g. Linear) take precedence. You get personalized answers without the agent inventing facts or overstating what it knows.
+
 ---
 
 ## Related guides
