--- a/inbox.mdx
+++ b/inbox.mdx
@@ -1,18 +1,20 @@
 ---
 title: "Inbox"
-description: "Proactive reports from your automations"
+description: "Proactive reports from your agents"
 ---
 
 ## What is the Inbox?
 
-The **Inbox** is where proactive reports from your automations land. Instead of asking questions manually, you set up automations to run on a schedule (e.g. every Monday at 9am). Each run produces a report that appears in your Inbox.
+The **Inbox** is where proactive reports from your agents land. Instead of asking questions manually, you set up agents to run on a schedule (e.g. every Monday at 9am). Each run produces a report that appears in your Inbox.
+
+**Why it matters:** Evidence-backed answers and proactive alerts so you spend less time searching and more time deciding. Reports land in one place; open any run to read, follow up, or push to Notion.
 
 ---
 
 ## How it works
 
-1. You create an **Automation** with a question and schedule (e.g. "What are the top open issues?" every Monday).
-2. Ravell runs the automation at the scheduled time.
+1. You create an **Agent** with a question and schedule (e.g. "What are the top open issues?" every Monday).
+2. Ravell runs the agent at the scheduled time.
 3. The report appears in your **Inbox** with the same format as an Ask answer: evidence-backed, with citations.
 4. You open the report to read it. Use **Open in Chats** to move it to the main Asks view if you want to follow up.
 
@@ -21,7 +23,7 @@ The **Inbox** is where proactive reports from your automations land. Instead of 
 ## Inbox layout
 
 - **Get started**: The product tour is always first. Use it to onboard new teammates.
-- **Recent runs**: Below that, your automation runs appear in reverse chronological order.
+- **Recent runs**: Below that, your agent runs appear in reverse chronological order.
 - **Status**: Each run shows its status (completed, failed, running). Click a run to read the full report.
 
 ---
@@ -36,6 +38,6 @@ The **Inbox** is where proactive reports from your automations land. Instead of 
 
 ## Tips
 
-- Use automations for recurring questions: weekly summaries, standup digests, "top issues" reports.
-- Scope automations to specific sources (e.g. Linear only) for focused answers.
+- Use agents for recurring questions: weekly summaries, standup digests, "top issues" reports.
+- Scope agents to specific sources (e.g. Linear only) for focused answers.
 - Check the Inbox regularly to stay on top of proactive insights without manually asking each time.
