--- a/index.mdx
+++ b/index.mdx
@@ -14,8 +14,8 @@ description: "Ravell is your Product Agent — evidence-backed answers from Line
 | Feature | What it does |
 |---------|--------------|
 | **Web Asks** | Ask questions in the app. Ravell searches your sources, retrieves evidence, and synthesizes answers with citations. Full pipeline transparency via streaming thoughts. |
-| **Slack Agent** | Use Ravell in Slack via `/ravell`. Ask questions, create Linear issues, manage automations — all in natural language, in-thread. |
-| **Automations** | Schedule recurring questions (e.g. weekly summaries). Reports land in your Inbox and optionally in Slack. Same quality as Web Asks, on a schedule. |
+| **Slack Agent** | Use Ravell in Slack via `/ravell`. Ask questions, create Linear issues, manage agents — all in natural language, in-thread. |
+| **Agents** | Schedule recurring questions (e.g. weekly summaries). Reports land in your Inbox and optionally in Slack. Same quality as Web Asks, on a schedule. |
 
 All three use the same connected sources (Linear, Notion, Intercom, Slack) and the same evidence-backed pipeline. Connect sources once; use them everywhere.
 
@@ -25,8 +25,8 @@ All three use the same connected sources (Linear, Notion, Intercom, Slack) and t
 
 | Area | What you do |
 |------|-------------|
-| **Inbox** | Read proactive reports from your automations. |
-| **Automations** | Create and manage scheduled queries. |
+| **Inbox** | Read proactive reports from your agents. |
+| **Agents** | Create and manage scheduled queries. |
 | **Sources** | Connect and manage Linear, Notion, Intercom, Slack. |
 | **Context** | View and edit profiles (individual + workspace) and Memory for AI personalization. |
 | **Asks** | One-off questions and follow-ups; each Ask is a thread with answers and citations. |
@@ -38,8 +38,8 @@ All three use the same connected sources (Linear, Notion, Intercom, Slack) and t
 ## Getting started
 
 - **Sign in** with your email or existing auth; create or join a workspace if prompted.
-- **Workspace** = your team's shared space. All sources, Asks, and Automations live here.
-- Use the **sidebar** to switch between Inbox, Automations, Sources, and Asks.
+- **Workspace** = your team's shared space. All sources, Asks, and Agents live here.
+- Use the **sidebar** to switch between Inbox, Agents, Sources, and Asks.
 
 <Card title="Quickstart" icon="rocket" href="/quickstart" horizontal>
   Get up and running in minutes.
@@ -50,10 +50,10 @@ All three use the same connected sources (Linear, Notion, Intercom, Slack) and t
 </Card>
 
 <Card title="Slack Agent" icon="comments" href="/slack-agent" horizontal>
-  Use Ravell in Slack: questions, Linear actions, automations.
+  Use Ravell in Slack: questions, Linear actions, agents.
 </Card>
 
-<Card title="Automations" icon="bolt" href="/automations" horizontal>
+<Card title="Agents" icon="bolt" href="/automations" horizontal>
   Schedule recurring questions, templates, Slack delivery.
 </Card>
 
@@ -69,4 +69,4 @@ All three use the same connected sources (Linear, Notion, Intercom, Slack) and t
 
 ## In short
 
-**Sources** = what Ravell knows. **Asks** = one-off Q&A with citations. **Automations** = scheduled questions; reports go to **Inbox**. Ravell is the **institutional memory layer**: evidence-backed answers and proactive alerts so you spend less time searching and more time deciding.
+**Sources** = what Ravell knows. **Asks** = one-off Q&A with citations. **Agents** = scheduled questions; reports go to **Inbox**. Ravell is the **institutional memory layer**: evidence-backed answers and proactive alerts so you spend less time searching and more time deciding.
