--- a/integrations/notion.mdx
+++ b/integrations/notion.mdx
@@ -34,7 +34,7 @@ From an Ask answer or Inbox report, you can **Push to Notion** to create a new p
 
 - Sharing answers with your team in a Notion doc.
 - Building a knowledge base of recurring reports.
-- Archiving automation outputs.
+- Archiving agent outputs.
 
 1. Open an Ask or Inbox report.
 2. Click **Push to Notion**.
