--- a/integrations/slack.mdx
+++ b/integrations/slack.mdx
@@ -37,12 +37,12 @@ The **Slack Agent** lets you use Ravell directly from Slack via the slash comman
 
 - **Ask questions** — Search across Linear, Notion, Intercom, and Slack; get answers with citations.
 - **Create and update Linear records** — Issues, projects, initiatives, documents, customer requests — in natural language (e.g. "Create a bug about login timeouts").
-- **Manage automations** — Create, update, list, pause, resume, or delete automations from Slack.
+- **Manage agents** — Create, update, list, pause, resume, or delete agents from Slack.
 
 See the [Slack Agent](/slack-agent) guide for full details and examples.
 
 ---
 
-## Automation delivery
+## Agent delivery
 
-When creating an **Automation**, you can enable **Deliver to Slack** to post reports to a channel when the automation runs. Reports appear in the channel with citations, same as in the Inbox. Requires the automation to be shared with the workspace. See [Automations](/automations) for details.
+When creating an **Agent**, you can enable **Deliver to Slack** to post reports to a channel when the agent runs. Reports appear in the channel with citations, same as in the Inbox. Requires the agent to be shared with the workspace. See [Agents](/automations) for details.
