--- a/memory.mdx
+++ b/memory.mdx
@@ -17,6 +17,8 @@ Memory lives in the **Context** view. Open **Context** from the sidebar to view 
 
 **Memory** is Ravell's store of what it learns about you over time. When you ask questions, have conversations, or share context, Ravell can remember key facts (e.g. "You work on the checkout team" or "You prefer summaries in bullet points"). This helps personalize future answers across sessions.
 
+**Why it matters:** Facts you share are extracted and stored. Next time, they're already in context. For each question, Ravell pulls the most relevant memories; your role and identity are always included. The more you use Ravell, the better it understands you and the less you need to repeat yourself.
+
 ---
 
 ## What Memory stores
