--- a/profiles.mdx
+++ b/profiles.mdx
@@ -17,6 +17,8 @@ Profiles live in the **Context** view. Open **Context** from the sidebar to view
 
 **Profiles** describe who you are and what you work on. Ravell uses profiles to personalize answers — for example, prioritizing issues assigned to you or focusing on projects you care about.
 
+**Why it matters:** Ravell learns your role, current work, and priorities from Linear, Slack, and past conversations. It understands your product, teams, and roadmap so answers are grounded in your reality, not generic. You get an answer immediately using cached profiles; refresh happens in the background. Answers feel tailored to you and your team from the first question.
+
 There are two types:
 
 - **Individual profile**: Your personal context (role, focus areas, projects).
