--- a/scoping-queries.mdx
+++ b/scoping-queries.mdx
@@ -37,11 +37,11 @@ Ravell interprets relative time ranges and scopes the search accordingly. For cy
 
 ---
 
-## Scoping in Automations
+## Scoping in Agents
 
-When creating an Automation, you can set a default scope:
+When creating an Agent, you can set a default scope:
 
-- **Sources**: Limit the automation to specific sources (e.g. Linear only).
+- **Sources**: Limit the agent to specific sources (e.g. Linear only).
 - **Time**: The question text can include time bounds (e.g. "this week", "current cycle").
 
-This keeps automation reports focused and consistent.
+This keeps agent reports focused and consistent.
