--- a/shortcuts.mdx
+++ b/shortcuts.mdx
@@ -32,7 +32,7 @@ You can link directly to specific views or Asks:
 | URL | Opens |
 |-----|-------|
 | `https://app.ravell.io/app?view=inbox` | Inbox |
-| `https://app.ravell.io/app?view=automations` | Automations |
+| `https://app.ravell.io/app?view=automations` | Agents |
 | `https://app.ravell.io/app?view=sources` | Sources |
 | `https://app.ravell.io/app?view=context` | Context |
 | `https://app.ravell.io/app?chat=<slug>` | Specific Ask by slug |
