--- a/sources.mdx
+++ b/sources.mdx
@@ -7,7 +7,7 @@ description: "Connect Linear, Notion, Intercom, and Slack to power your answers"
 
 **Sources** are the tools you connect to Ravell via OAuth: Linear, Notion, Intercom, and Slack. Ravell syncs data from these sources, indexes it for search, and uses it to answer your questions with citations.
 
-The more sources you connect, the richer and more accurate your answers.
+**Why it matters:** Ravell searches across all connected sources in several ways at once. Results are merged and re-ranked so the best evidence surfaces first. Related items (e.g. issues linked to a project) are pulled in automatically. You get answers even when the right info is scattered and phrased differently from your question. The more sources you connect, the richer and more accurate your answers.
 
 ---
 
