--- a/workspace-setup.mdx
+++ b/workspace-setup.mdx
@@ -5,7 +5,7 @@ description: "Create a workspace, invite members, and manage roles"
 
 ## What is a workspace?
 
-A **workspace** is your team's shared space in Ravell. All sources (Linear, Notion, Intercom, Slack), Asks, Automations, and Inbox reports live in a workspace. Members share access to the same data and can collaborate on questions and reports.
+A **workspace** is your team's shared space in Ravell. All sources (Linear, Notion, Intercom, Slack), Asks, Agents, and Inbox reports live in a workspace. Members share access to the same data and can collaborate on questions and reports.
 
 ---
 
@@ -25,7 +25,7 @@ A **workspace** is your team's shared space in Ravell. All sources (Linear, Noti
 3. Enter their email address.
 4. They receive an invitation email with a link to join.
 
-Members can **accept** or **decline** the invitation. Once they accept, they can access the workspace and all its sources, Asks, and Automations.
+Members can **accept** or **decline** the invitation. Once they accept, they can access the workspace and all its sources, Asks, and Agents.
 
 ---
 
@@ -34,7 +34,7 @@ Members can **accept** or **decline** the invitation. Once they accept, they can
 Workspace members have roles that control what they can do:
 
 - **Owner**: Full access. Can manage members, billing, and delete the workspace.
-- **Member**: Can use Asks, Automations, Inbox, and Sources. Cannot manage billing or remove other members.
+- **Member**: Can use Asks, Agents, Inbox, and Sources. Cannot manage billing or remove other members.
 
 Roles are managed in **Settings → Members**. Owners can change a member's role or suspend/remove them.
 
@@ -42,4 +42,4 @@ Roles are managed in **Settings → Members**. Owners can change a member's role
 
 ## Switch workspaces
 
-If you belong to multiple workspaces, use the workspace picker in the sidebar to switch. Each workspace has its own sources, Asks, and Automations.
+If you belong to multiple workspaces, use the workspace picker in the sidebar to switch. Each workspace has its own sources, Asks, and Agents.
