--- a/workspace-management.mdx
+++ b/workspace-management.mdx
@@ -32,7 +32,7 @@ Workspace management covers members, invitations, and roles. Owners and (where p
 ## Roles
 
 - **Owner**: Full access. Can manage members, billing, invitations, and delete the workspace.
-- **Member**: Can use Asks, Automations, Inbox, Sources. Cannot manage billing or remove other members.
+- **Member**: Can use Asks, Agents, Inbox, Sources. Cannot manage billing or remove other members.
 
 Only owners can change roles and manage invitations.
 
